mule-user-guide/v/3.2/adding-message-processors-to-a-flow.adoc
= Adding Message Processors to a Flow

This example shows how to add message processing components, in this example Logger and Echo, to a Flow. By doing so, you can perform custom logging in your Mule application. Logging is useful to introspect the current message and create logging events for your specific needs.

We introduce several new concepts here:

* http://blogs.mulesoft.org/mule-3-architecture-part-2-introducing-the-message-processor/[Message Processor] - The Message Processor is the basic building block of all elements in Mule. These blocks can be glued together to create Mule flows. In this example, we use the Logger and Echo message processors.
* link:/mule-user-guide/v/3.2/using-expressions[Mule Expressions] - Mule has a powerful, built-in expression language for querying request and response payloads and headers. We use an expression with the Logger component to extract some information and log something useful.

== What You Will Learn

* How to build on an existing Mule Flow in Mule Studio
* How to use expressions to log request details

* http://www.youtube.com/watch?v=74cfWpz0fic
image:http://www.mulesoft.org/sites/all/themes/litejazz/images/documentation/echo-flow.png[image]]
*Watch a video*
+
 +
+
See this example built and run in Mule Studio

5 minutes

= Build it Now!

== Prerequisites

This examples requires that you have completed the previous example, link:/mule-user-guide/v/3.2/configuring-an-endpoint[Configuring an Endpoint].

== Building the Example

\1. We continue editing the link:/mule-user-guide/v/3.2/configuring-an-endpoint[previous example], now adding a Logger component to the flow. Drag the Logger component from the palette to the canvas and placed it between the HTTP endpoint and Echo component:

image:/documentation-3.2/download/attachments/41910521/studioAddLogger.png?version=1&modificationDate=1358791426639[image]

\2. Double click the Logger component to edit its properties.

\3. In the Message field enter the following text: "About to echo #[MULE3EXAMPLES:payload]"

image:/documentation-3.2/download/attachments/41910521/studioConfigureLogger.png?version=1&modificationDate=1358791451484[image]

The `#[MULE3EXAMPLES:payload]` is a mule expression that is evaluated every time a request is made on this flow. The expression extracts the request payload. You can use Mule'spowerful expression language to execute XPATH, Groovy, and other code on the request or response header and payload.

== Running the Example

\4. Right click the flow in the project tree and select Run As… → Mule Application

[cols=",",]
|===
|image:/documentation-3.2/images/icons/emoticons/check.gif[image] |*Hot Deployment* +

There's no need to stop the Mule application if it is still running from the previous example. The changes you made here are automatically "hot deployed" when you hit Save in the File menu or press CTRL+S.
|===

image:/documentation-3.2/download/attachments/41910521/studioRunMuleFlow.png?version=1&modificationDate=1358791487703[image]

\5. Next, open a browser and go to http://localhost:8081/echo. You should see the following in your browser:

image:/documentation-3.2/download/attachments/41910521/studioEchoFlowWebOutput.png?version=1&modificationDate=1358791529569[image]

\6. Now go back to Mule Studio and check the logs. You'll see that the Logger wrote the request payload to the console window.

image:/documentation-3.2/download/attachments/41910521/studioLoggerConsoleOutput.png?version=1&modificationDate=1358791553833[image]

== What Just Happened?

* You just added a Logger message processor to your flow, which demonstrated how different processors can be sequenced in a Flow.
* You used the `#[MULE3EXAMPLES:payload]` expression to log the payload of the request. The expression is evaluated for every message received at runtime.

== References

* link:/mule-user-guide/v/3.2/logger-element-for-flows[Logger]
* http://blogs.mulesoft.org/mule-3-architecture-part-2-introducing-the-message-processor/[Message Processor]
* link:/mule-user-guide/v/3.2/using-expressions[Mule Expressions]

== Next Steps

[cols=",,",]
|===
|http://www.mulesoft.org/display/32X/Configuring+an+Endpoint[« Configuring an Endpoint] |http://www.mulesoft.org/display/32X/Home[Back to Index] |http://www.mulesoft.org/display/32X/Adding+Business+Logic+to+a+Flow[Adding Business Logic to a Flow »]
|===

'''''

image:/documentation-3.2/download/resources/com.adaptavist.confluence.rate:rate/resources/themes/v2/gfx/loading_mini.gif[image]image:/documentation-3.2/download/resources/com.adaptavist.confluence.rate:rate/resources/themes/v2/gfx/rater.gif[image]

Your Rating:

Thanks for voting!

link:/documentation-3.2/plugins/rate/rating.action?decorator=none&displayFilter.includeCookies=true&displayFilter.includeUsers=true&ceoId=41910521&rating=1&redirect=true[image:/documentation-3.2/download/resources/com.adaptavist.confluence.rate:rate/resources/themes/v2/gfx/blank.gif[image]]link:/documentation-3.2/plugins/rate/rating.action?decorator=none&displayFilter.includeCookies=true&displayFilter.includeUsers=true&ceoId=41910521&rating=2&redirect=true[image:/documentation-3.2/download/resources/com.adaptavist.confluence.rate:rate/resources/themes/v2/gfx/blank.gif[image]]link:/documentation-3.2/plugins/rate/rating.action?decorator=none&displayFilter.includeCookies=true&displayFilter.includeUsers=true&ceoId=41910521&rating=3&redirect=true[image:/documentation-3.2/download/resources/com.adaptavist.confluence.rate:rate/resources/themes/v2/gfx/blank.gif[image]]link:/documentation-3.2/plugins/rate/rating.action?decorator=none&displayFilter.includeCookies=true&displayFilter.includeUsers=true&ceoId=41910521&rating=4&redirect=true[image:/documentation-3.2/download/resources/com.adaptavist.confluence.rate:rate/resources/themes/v2/gfx/blank.gif[image]]link:/documentation-3.2/plugins/rate/rating.action?decorator=none&displayFilter.includeCookies=true&displayFilter.includeUsers=true&ceoId=41910521&rating=5&redirect=true[image:/documentation-3.2/download/resources/com.adaptavist.confluence.rate:rate/resources/themes/v2/gfx/blank.gif[image]]

image:/documentation-3.2/download/resources/com.adaptavist.confluence.rate:rate/resources/themes/v2/gfx/blank.gif[Please Wait,title="Please Wait"]

Please Wait

Results:

image:/documentation-3.2/download/resources/com.adaptavist.confluence.rate:rate/resources/themes/v2/gfx/blank.gif[Pathetic,title="Pathetic"]image:/documentation-3.2/download/resources/com.adaptavist.confluence.rate:rate/resources/themes/v2/gfx/blank.gif[Bad,title="Bad"]image:/documentation-3.2/download/resources/com.adaptavist.confluence.rate:rate/resources/themes/v2/gfx/blank.gif[OK,title="OK"]image:/documentation-3.2/download/resources/com.adaptavist.confluence.rate:rate/resources/themes/v2/gfx/blank.gif[Good,title="Good"]image:/documentation-3.2/download/resources/com.adaptavist.confluence.rate:rate/resources/themes/v2/gfx/blank.gif[Outstanding!,title="Outstanding!"]

17

rates

